src/components/breadcrumb/breadcrumb.css
:host,
:host * {
  box-sizing: border-box;
}

:host {
  --breadcrumb-font-regular: var(--leu-font-regular);
  --breadcrumb-font-black: var(--leu-font-black);

  font-family: var(--breadcrumb-font-regular);
  line-height: 1.5;
  color: var(--leu-color-black-100);
}

:host([inverted]) {
  color: var(--leu-color-black-0);
}

.breadcrumbs__list {
  display: flex;
  align-items: center;
  list-style-type: none;
  margin: 0;
  padding: 0;

  /* overflow: hidden; */
}

.breadcrumbs__item,
.breadcrumbs__icon {
  align-items: center;
  display: flex;
  min-height: 1.875rem;
  white-space: nowrap;
}

.breadcrumbs__item:first-child {
  font-family: var(--breadcrumb-font-black);
}

.breadcrumbs__link {
  color: inherit;
  text-decoration: none;
  transition: color 0.1s ease;
  white-space: nowrap;
}

.menu {
  background: none;
  color: inherit;
  cursor: pointer;
  border: 2px solid transparent;
}

.menu:focus-visible {
  outline: 2px solid var(--leu-color-func-cyan);
  outline-offset: 2px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  position: absolute;
  background-color: var(--leu-color-black-0);
  min-width: 160px;
  overflow: visible;
  box-shadow: var(--leu-box-shadow-short);
  z-index: 1;
}

.visuallyhidden {
  clip: rect(0 0 0 0);
  border: 0;
  height: 1px;
  margin: -1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute;
  width: 1px;
}

.breadcrumbs {
  font-size: 1rem;
}

@media (width >= 320px) {
  .breadcrumbs {
    font-size: calc(2.5vw + 8px);
  }
}

@media (width >= 400px) {
  .breadcrumbs {
    font-size: 18px;
  }
}

@media (width >= 1024px) {
  .breadcrumbs {
    font-size: calc(0.7813vw + 10px);
  }
}

@media (width >= 1280px) {
  .breadcrumbs {
    font-size: 20px;
  }
}

